--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -861,3 +861,183 @@ jobs:
       run: conan create ./bison/all --name=bison --version=3.8.2 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r cps-artifactory -c
+
+  build-gperf:
+    runs-on: ubuntu-latest
+    needs: build-flex
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
+        sudo pip install --upgrade conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./gperf/all --name=gperf --version=3.1 --build-require
+    - name: build debug
+      run: conan create ./gperf/all --name=gperf --version=3.1 --build-require -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-gperf-macos:
+    runs-on: macos-latest
+    needs: build-flex-mac
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        brew install conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./gperf/all --name=gperf --version=3.1 --build-require
+    - name: build debug
+      run: conan create ./gperf/all --name=gperf --version=3.1 --build-require -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-icu:
+    runs-on: ubuntu-latest
+    needs: build-flex
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
+        sudo pip install --upgrade conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./icu/all --name=icu --version=74.2
+    - name: build debug
+      run: conan create ./icu/all --name=icu --version=74.2 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-icu-macos:
+    runs-on: macos-latest
+    needs: build-flex-mac
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        brew install conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./icu/all --name=icu --version=74.2
+    - name: build debug
+      run: conan create ./icu/all --name=icu --version=74.2 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-libbacktrace:
+    runs-on: ubuntu-latest
+    needs: build-flex
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
+        sudo pip install --upgrade conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./libbacktrace/all --name=libbacktrace --version=cci.20210118
+    - name: build debug
+      run: conan create ./libbacktrace/all --name=libbacktrace --version=cci.20210118 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-libbacktrace-macos:
+    runs-on: macos-latest
+    needs: build-flex-mac
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        brew install conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./libbacktrace/all --name=libbacktrace --version=cci.20210118
+    - name: build debug
+      run: conan create ./libbacktrace/all --name=libbacktrace --version=cci.20210118 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-libelf:
+    runs-on: ubuntu-latest
+    needs: build-flex
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
+        sudo pip install --upgrade conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./libelf/all --name=libelf --version=0.8.13
+    - name: build debug
+      run: conan create ./libelf/all --name=libelf --version=0.8.13 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
+
+  build-libelf-macos:
+    runs-on: macos-latest
+    needs: build-flex-mac
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: prepare runner
+      run: | 
+        brew install conan
+        conan profile detect
+        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+        conan remote remove conancenter
+    - name: build_release
+      run: conan create ./libelf/all --name=libelf --version=0.8.13
+    - name: build debug
+      run: conan create ./libelf/all --name=libelf --version=0.8.13 -s build_type=Debug
+    - name: deploy
+      run: conan upload "*" -r cps-artifactory -c
